--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -46,7 +46,7 @@
                                     <td><%= orders[i].expectedDelivery.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %></td>
                                     <td><%= orders[i].uniqueId %></td>
                                     <td>
-                                        <a  href="/orderDetails?id=<%= orders[i]._id %>" class=" btn-outline-dark btn-round">View Details</a>
+                                        <a  href="/orderDetails?id=<%= orders[i]._id %>" class=" btn  rounded-pill " style="background-color: rgb(205, 205, 205);">View Details</a>
                                     </td>
                                 </td>
                                 
