--- a/views/users/wallet.ejs
+++ b/views/users/wallet.ejs
@@ -18,90 +18,97 @@
             </ol>
         </div><!-- End .container -->
     </nav><!-- End .breadcrumb-nav -->
+    <% if(user.walletHistory && user.walletHistory.length>0) {%>
 
-    <div class="container my-5">
-        <div class="col-12 row p-5">
-
-            <div class="col-lg-6 col-12">
-
-                <div class="card  wallet-card ">
-                    <div class="card-body text-white m-5  col-12 row ">
-                        <div class="col-8 mt-3">
-                            <span class="text-uppercase">asdfsdfafd</span> 
-                           
-                            <h6 class=" text-white mt-0" style="font-size: 24px;"><span class="">2343245345</span>
-                            </h6>
-
-                        </div>
-                        <div class="col-4 d-flex justify-content-center mt-4">
-                            <h6 class="text-white " style="font-size: 25px;"><i
-                                                                                                                                                                                                                                                                                               class="fa-light fa-wifi fa-rotate-90"></i>
-                            </h6>
-                        </div>
-
-                        <div class="col-7 d-flex  align-items-end">
-                            <h4 class="text-light pb-1">Wallet Balace</h4>
-                        </div>
-                        <div class="col-5 d-flex  align-items-end">
-                            <h2 class="text-white">₹ 323223</h2>
-                         
-                              
-                        </div>
+    <section class="mt-5">
+        <div class="container">
+            <h1 class="text-decoration-underline">WALLET HISTORY</h1>
+            
+                <div class="mt-5">
+                    <div class="table-responsive">
+                        <table class="table table-bordered text-center align-middle" width="100%" id="sortTable">
+                            <col style="width:10%">
+                            <col style="width:15%">
+                            <col style="width:25%">
+                            <col style="width:20%">
+                            <col style="width:15%">
+                            <col style="width:25%">
+                            <thead class="text-nowrap thead-light">
+                                <tr>
+                                    <th scope="col" class="text-center border">#</th>
+                                    <th scope="col" class="text-center border">Date</th>
+                                    <th scope="col" class="text-center border">Details</th>
+                                    <th scope="col" class="text-center border">Type</th>
+                                    <th scope="col" class="text-center border">Amount</th>
+                                    <th scope="col" class="text-center border">Current Balance</th>
+                                </tr>
+                            </thead>
+                            <tbody> <!-- .reverse for showing the data from latest transaction-->
+                                <% user.walletHistory.reverse().forEach((data)=>{ %>
+                                
+                                    <tr>
+                                        <th scope="row" class="border">
+                                            <%=user.walletHistory.indexOf(data) +1%>
+                                            
+                                        </th>
+                                        <% const dd=data.transactionDate.getDate(); const
+                                        mm=data.transactionDate.getMonth() + 1; const
+                                        yyyy=data.transactionDate.getFullYear(); const
+                                        formattedDate=`${dd}-${mm}-${yyyy}`; %>
+                                            <td class="border">
+                                                <%=formattedDate %>
+                                                
+                                            </td>
+                                            <td class="border">
+                                                <%=data.transactionDetails %>
+                                                
+                                            </td>
+                                            <% if(data.transactionType=='Credit' ) {%>
+                                            
+                                                <td class="border">
+                                                    <%=data.transactionType %>
+                                                    
+                                                </td>
+                                                <td class="text-success border">
+                                                    +<%=data.transactionAmount %>
+                                                    
+                                                </td>
+                                                <% }else{ %>
+                                                
+                                                    <td class="border">
+                                                        <%=data.transactionType %>
+                                                        
+                                                    </td>
+                                                    <td class="text-danger border">
+                                                        -<%=data.transactionAmount %>
+                                                        
+                                                    </td>
+                                                    <% } %>
+                                                   
+                                                        <td class="border">
+                                                            ₹<%=data.currentBalance %>
+                                                            
+                                                        </td>
+                                    </tr>
+                                    <% }) %>
+                                    
+                            </tbody>
+                        </table>
                     </div>
                 </div>
-
-            </div>
-
-            <div class="col-lg-6 col-12">
-                <div class="w-100 mt-2">
-                    <p style="font-size: 22px;"><i class="fa-duotone fa-money-check-dollar-pen"></i> Transaction
-                        History</p>
-                    <hr my-0>
-                    <!-- table-wrapper-scroll-y my-custom-scrollbar -->
-                    
-                <div class="my-custom-scrollbar" style="max-height: 600px; overflow: auto;">
-
-                    <table class="table " >
-                        <thead class="table-light ">
-                            <tr>
-                                <th>Purpose</th>
-                                <th>Amount</th>
-                                <th>method</th>
-                                <th>Date</th>
-                                <th>Status</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            
-                            
-                                
-                        </tr>
-                            <td> sdfgdsfg</td>
-                            <td style="font-weight: 500;">₹ 354345</td>
-                            <td>dfgsdfgdf</td>
-                            
-                            <td>234234234</td>
-                            <td  >
-                                
-                                <p class="btn-success text-center" style="border-radius: 0.4rem;">success</p>
-                            </td>
-                        </tr>
-                     
-                        
-
-                        </tbody>
-                    </table>
-                </div>
-
+                <% }else{ %>
                 
-                        <p class="text-center"><i class="fa-light fa-money-check-dollar"></i> You have no Transaction</p>
+                    <div class="mainDiv text-center container">
+                        <h1>No wallet transactions!</h1>
+                        <img src="/assets/extra-images/source.gif" width="300rem" class="img-fluid rounded-5" alt="">
+                        <div class="mt-3">
+                            <a href="/shop" class="rounded-0 btn btn-white border-1 border-dark">GO SHOPPING</a>
+                        </div>
+                    </div>
+                    <% } %>
                    
-                </div>
-            </div>
-
         </div>
-
-    </div>
+    </section>
 </main>
 
 
