--- a/views/users/walletHistory.ejs
+++ b/views/users/walletHistory.ejs
@@ -1,1 +1,115 @@
-h
+
+<%- include('../users/mainLayout/mainHeader.ejs')%>
+
+
+
+
+<main class="main">
+    <div class="page-header text-center" style="background-image: url('user/images/page-header-bg.jpg')">
+        <div class="container">
+            <h1 class="page-title text-white"><i class="fa-thin fa-wallet"></i> Wallet History</h1>
+        </div><!-- End .container -->
+    </div><!-- End .page-header -->
+    <nav aria-label="breadcrumb" class="breadcrumb-nav">
+        <div class="container">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Wallet</li>
+            </ol>
+        </div><!-- End .container -->
+    </nav><!-- End .breadcrumb-nav -->
+    <% if(user.walletHistory && user.walletHistory.length>0) {%>
+
+    <section class="mt-5">
+        <div class="container">
+            <h1 class="text-decoration-underline">WALLET HISTORY</h1>
+            
+                <div class="mt-5">
+                    <div class="table-responsive">
+                        <table class="table table-bordered text-center align-middle" width="100%" id="sortTable">
+                            <col style="width:10%">
+                            <col style="width:15%">
+                            <col style="width:25%">
+                            <col style="width:20%">
+                            <col style="width:15%">
+                            <col style="width:25%">
+                            <thead class="text-nowrap thead-light">
+                                <tr>
+                                    <th scope="col" class="text-center border">#</th>
+                                    <th scope="col" class="text-center border">Date</th>
+                                    <th scope="col" class="text-center border">Details</th>
+                                    <th scope="col" class="text-center border">Type</th>
+                                    <th scope="col" class="text-center border">Amount</th>
+                                    <th scope="col" class="text-center border">Current Balance</th>
+                                </tr>
+                            </thead>
+                            <tbody> <!-- .reverse for showing the data from latest transaction-->
+                                <% user.walletHistory.reverse().forEach((data)=>{ %>
+                                
+                                    <tr>
+                                        <th scope="row" class="border">
+                                            <%=user.walletHistory.indexOf(data) +1%>
+                                            
+                                        </th>
+                                        <% const dd=data.transactionDate.getDate(); const
+                                        mm=data.transactionDate.getMonth() + 1; const
+                                        yyyy=data.transactionDate.getFullYear(); const
+                                        formattedDate=`${dd}-${mm}-${yyyy}`; %>
+                                            <td class="border">
+                                                <%=formattedDate %>
+                                                
+                                            </td>
+                                            <td class="border">
+                                                <%=data.transactionDetails %>
+                                                
+                                            </td>
+                                            <% if(data.transactionType=='Credit' ) {%>
+                                            
+                                                <td class="border">
+                                                    <%=data.transactionType %>
+                                                    
+                                                </td>
+                                                <td class="text-success border">
+                                                    +<%=data.transactionAmount %>
+                                                    
+                                                </td>
+                                                <% }else{ %>
+                                                
+                                                    <td class="border">
+                                                        <%=data.transactionType %>
+                                                        
+                                                    </td>
+                                                    <td class="text-danger border">
+                                                        -<%=data.transactionAmount %>
+                                                        
+                                                    </td>
+                                                    <% } %>
+                                                   
+                                                        <td class="border">
+                                                            ₹<%=data.currentBalance %>
+                                                            
+                                                        </td>
+                                    </tr>
+                                    <% }) %>
+                                    
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <% }else{ %>
+                
+                    <div class="mainDiv text-center container">
+                        <h1>No wallet transactions!</h1>
+                        <img src="/assets/extra-images/source.gif" width="300rem" class="img-fluid rounded-5" alt="">
+                        <div class="mt-3">
+                            <a href="/shop" class="rounded-0 btn btn-white border-1 border-dark">GO SHOPPING</a>
+                        </div>
+                    </div>
+                    <% } %>
+                   
+        </div>
+    </section>
+</main>
+
+
+<%- include('../users/mainLayout/mainFooter.ejs')%>
