--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -36,16 +36,20 @@
                       <td class="align-middle"><%=orders.products[i].quantity%></td>
                       <td class="align-middle">₹ <%- (orders.products[i].productId.price) * (orders.products[i].quantity) %></td>
                       <td class="align-middle action-column">
-
+                        <% if (orders.products[i].OrderStatus !== 'Returned') { %>
                         <% if (orders.products[i].OrderStatus !== 'Cancelled') { %>
                           <% if (orders.products[i].OrderStatus === 'Delivered' || orders.products[i].OrderStatus === 'OutforDelivery') { %>
-                              <button class="btn  rounded-pill return-product mall-btn" style="background-color: rgb(148, 148, 148); color: white;" onclick="returnOrder('<%= orders._id %>','<%= orders.products[i].productId._id %>')">Return</button>
+                              <button class="btn  rounded-pill return-product mall-btn" style="background-color: rgb(148, 148, 148); color: white;" data-bs-toggle="modal" data-bs-target="#return" >Return</button>
                           <% } else { %>
                               <button class="btn btn-danger cancel-product mall-btn" onclick="cancelOrder('<%= orders._id %>','<%= orders.products[i].productId._id %>')">Cancel</button>
                           <% } %>
                       <% } else { %>
                           <p class="text-danger">Cancelled</p>
                       <% } %>
+                        <%}else{%>
+                          <p class="text-danger">returned</p>
+                          
+                        <%}%>
                       
 
                         
@@ -60,41 +64,56 @@
                 <h5>Order Date:</h5>
                 <p><%=orders.date.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-')%></p>
               </div>
+              <%if (orders.products[i].OrderStatus === "Returned") {%>
+          
+        
+                <% }else{%>
               <div class="col-md-6">
                 <h5>Expected Delivery:</h5>
                 <p><%=orders.expectedDelivery.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-')%></p>
               </div>
             </div>
+            
+                  
+            
             <% if (orders.products[i].OrderStatus !== "Cancelled") { %>
-            <div class="progress-track">
-              
-              <ul id="progressbar">
-                <li style="font-size: 12px;" class="step0 active  " id="step1">Order placed</li>
-                <li style="font-size: 12px;" class="step0 text-center <%= orders.products[i].statusLevel >= 2 ? 'active' : '' %>" id="step2">Shipped</li>
-                <li style="font-size: 12px;" class="step0 text-right <%= orders.products[i].statusLevel >= 3 ? 'active' : '' %>" id="step3">Out for Delivery</li>
-                <li style="font-size: 12px;" class="step0 text-right text-success <%= orders.products[i].statusLevel >= 4 ? 'active' : '' %>" id="step4">Delivered</li>
-              </ul>
-            </div>
-            <% } else { %>
-                <div class="progress-track col-12">
-                  <ul id="progressbar">
-                    <li
-                      class="step0 active"
-                      style="width: 50%; font-size: 1rem"
-                      id="step1"
-                    >
-                      Order placed
-                    </li>
-                    <li
-                      class="step0 active text-right text-danger"
-                      style="width: 50%; font-size: 1rem"
-                      id="step4"
-                    >
-                      Cancelled
-                    </li>
-                  </ul>
-                </div>
-                <% } %>
+              <div class="progress-track">
+                
+                <ul id="progressbar">
+                  <li style="font-size: 12px;" class="step0 active  " id="step1">Order placed</li>
+                  <li style="font-size: 12px;" class="step0 text-center <%= orders.products[i].statusLevel >= 2 ? 'active' : '' %>" id="step2">Shipped</li>
+                  <li style="font-size: 12px;" class="step0 text-right <%= orders.products[i].statusLevel >= 3 ? 'active' : '' %>" id="step3">Out for Delivery</li>
+                  <li style="font-size: 12px;" class="step0 text-right text-success <%= orders.products[i].statusLevel >= 4 ? 'active' : '' %>" id="step4">Delivered</li>
+                </ul>
+              </div>
+              <% } else { %>
+                  <div class="progress-track col-12">
+                    <ul id="progressbar">
+                      <li
+                        class="step0 active"
+                        style="width: 50%; font-size: 1rem"
+                        id="step1"
+                      >
+                        Order placed
+                      </li>
+                      <li
+                        class="step0 active text-right text-danger"
+                        style="width: 50%; font-size: 1rem"
+                        id="step4"
+                      >
+                        Cancelled
+                      </li>
+                    </ul>
+                  </div>
+                  <% }%>
+          <% }%>
+                
+                
+           
+           
+
+                 
+               
           
         </div>
       </div>
@@ -112,10 +131,11 @@
   </div>
 </div>
 
-<% if (orders.status == "delivered") { %>
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- ............modal...... -->
+
+  <div class="modal fade" id="return" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content" style="margin-top: 120px;">
         <div class="modal-header p-5">
           <h5 id="exampleModalLabel">Are you sure?</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -137,34 +157,7 @@
       </div>
     </div>
   </div>
-<% } else { %>
-  <!--
-  <div class="modal fade" id="cancelModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content" style="margin-top: 200px;">
-        <div class="modal-header p-5">
-          <h5 id="exampleModalLabel">Are you sure?</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body p-5">
-          <form action="/orderCancel" method="post">
-            <input type="hidden" value="<%= orders._id %>" name="orderid">
-            <input type="hidden" value="<%= orders.totalAmount %>" name="totalPrice">
-            <div class="mb-3">
-              <label for="message-text" class="col-form-label">Give reason for order cancelling:</label>
-              <textarea name="reason" class="form-control" id="message-text" placeholder="eg: I changed my mind"></textarea>
-            </div>
-            <div class="modal-footer">
-              <button type="button" style="background-color: grey; border-radius: 5px; width: 100px; height: 40px;" data-bs-dismiss="modal">No</button>
-              <button type="submit" style="background-color: rgb(2, 116, 255); border-radius: 5px; width: 130px; height: 40px;">Yes</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-  -->
-<% } %>
+
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
