--- a/views/users/walletHistory.ejs
+++ b/views/users/walletHistory.ejs
@@ -102,7 +102,7 @@
                         <h1>No wallet transactions!</h1>
                         <img src="/assets/extra-images/source.gif" width="300rem" class="img-fluid rounded-5" alt="">
                         <div class="mt-3">
-                            <a href="/shop" class="rounded-0 btn btn-white border-1 border-dark">GO SHOPPING</a>
+                            <a href="/shop" class="rounded btn " style="margin-bottom: 12px; background-color: rgb(81, 86, 238); color: white;">GO SHOPPING</a>
                         </div>
                     </div>
                     <% } %>
