--- a/views/admin/orderFullDetails.ejs
+++ b/views/admin/orderFullDetails.ejs
@@ -69,6 +69,8 @@
                                       </h6>
                                       
                                       <hr class="m-0 p-0 my-3">
+                                      <% if (product.orderDetails.OrderStatus !== "Delivered") { %>
+
                                       <% if (product.orderDetails.OrderStatus !== "Returned") { %>
 
                                       <% if (product.orderDetails.OrderStatus !== "Cancelled") { %>
@@ -79,6 +81,9 @@
                                       <%}else{%>
                                         <h5 class="text-danger fw-300">Returned</h5>
                                       <%}%>
+                                     <% } else {%>
+                                        <h5 class =" fw-300" style="color: rgb(0, 227, 0);">Delivered</h5>
+                                     <% }%>
                                       
 
                                               <div class="col-12">
@@ -96,7 +101,7 @@
 
                   </div>
 
-                  <%if(product.orderDetails.OrderStatus ==="Returned"){%>
+                  <%if(product.orderDetails.OrderStatus ==="Returned" || product.orderDetails.OrderStatus ==="Delivered" ){%>
 
                  <% }else{%>            
 
