--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -14,7 +14,7 @@
         <div class="card-body">
           <h2 class="mb-4">Order Details</h2>
           <% if (orders && orders.products && orders.products.length > 0) { %>
-            <% for (let i = 0; i < orders.products.length; i++) { %>
+            <% orders.products.forEach((products , i) => {  %>
             <div class="table-responsive">
               <table class="table table-bordered table-striped text-center">
                 <thead>
@@ -30,18 +30,18 @@
                 <tbody>
                   
                     <tr>
-                      <td><img src="/static/adminAssets/images/<%=orders.products[i].productId.image[0]%>" alt="Product Image"></td>
-                      <td class="align-middle"><%=orders.products[i].productId.productName%></td>
-                      <td class="align-middle">₹ <%=orders.products[i].productId.price%></td>
-                      <td class="align-middle"><%=orders.products[i].quantity%></td>
-                      <td class="align-middle">₹ <%- (orders.products[i].productId.price) * (orders.products[i].quantity) %></td>
+                      <td><img src="/static/adminAssets/images/<%=products.productId.image[0]%>" alt="Product Image"></td>
+                      <td class="align-middle"><%=products.productId.productName%></td>
+                      <td class="align-middle">₹ <%=products.productId.price%></td>
+                      <td class="align-middle"><%=products.quantity%></td>
+                      <td class="align-middle">₹ <%- (products.productId.price) * (products.quantity) %></td>
                       <td class="align-middle action-column">
-                        <% if (orders.products[i].OrderStatus !== 'Returned') { %>
-                        <% if (orders.products[i].OrderStatus !== 'Cancelled') { %>
-                          <% if (orders.products[i].OrderStatus === 'Delivered' || orders.products[i].OrderStatus === 'OutforDelivery') { %>
+                        <% if (products.OrderStatus !== 'Returned') { %>
+                        <% if (products.OrderStatus !== 'Cancelled') { %>
+                          <% if (products.OrderStatus === 'Delivered' || products.OrderStatus === 'OutforDelivery') { %>
                               <button class="btn  rounded-pill return-product mall-btn" style="background-color: rgb(148, 148, 148); color: white;" data-bs-toggle="modal" data-bs-target="#return" >Return</button>
                           <% } else { %>
-                              <button class="btn btn-danger cancel-product mall-btn" onclick="cancelOrder('<%= orders._id %>','<%= orders.products[i].productId._id %>')">Cancel</button>
+                              <button class="btn btn-danger cancel-product mall-btn"   data-bs-toggle="modal" data-bs-target="#cancel"  >Cancel</button>
                           <% } %>
                       <% } else { %>
                           <p class="text-danger">Cancelled</p>
@@ -64,7 +64,7 @@
                 <h5>Order Date:</h5>
                 <p><%=orders.date.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-')%></p>
               </div>
-              <%if (orders.products[i].OrderStatus === "Returned") {%>
+              <%if (products.OrderStatus === "Returned") {%>
           
         
                 <% }else{%>
@@ -76,14 +76,14 @@
             
                   
             
-            <% if (orders.products[i].OrderStatus !== "Cancelled") { %>
+            <% if (products.OrderStatus !== "Cancelled") { %>
               <div class="progress-track">
                 
                 <ul id="progressbar">
                   <li style="font-size: 12px;" class="step0 active  " id="step1">Order placed</li>
-                  <li style="font-size: 12px;" class="step0 text-center <%= orders.products[i].statusLevel >= 2 ? 'active' : '' %>" id="step2">Shipped</li>
-                  <li style="font-size: 12px;" class="step0 text-right <%= orders.products[i].statusLevel >= 3 ? 'active' : '' %>" id="step3">Out for Delivery</li>
-                  <li style="font-size: 12px;" class="step0 text-right text-success <%= orders.products[i].statusLevel >= 4 ? 'active' : '' %>" id="step4">Delivered</li>
+                  <li style="font-size: 12px;" class="step0 text-center <%= products.statusLevel >= 2 ? 'active' : '' %>" id="step2">Shipped</li>
+                  <li style="font-size: 12px;" class="step0 text-right <%= products.statusLevel >= 3 ? 'active' : '' %>" id="step3">Out for Delivery</li>
+                  <li style="font-size: 12px;" class="step0 text-right text-success <%= products.statusLevel >= 4 ? 'active' : '' %>" id="step4">Delivered</li>
                 </ul>
               </div>
               <% } else { %>
@@ -108,31 +108,9 @@
                   <% }%>
           <% }%>
                 
-                
-           
-           
-
-                 
                
-          
-        </div>
-      </div>
-      <% } } %>
-      <div class="card mt-4 border-0 shadow">
-        <div class="card-body">
-          <h2 class="mb-4">Shipping Address</h2>
-          <p><%= orders.deliveryDetails %></p>
-        </div>
-      </div>
-      <div class="text-center mt-4">
-        <a href="/shop" class="btn btn-primary rounded continue-btn mb-4"><i class="bi bi-house-door"></i> Continue Shopping</a>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- ............modal...... -->
-
+           <!-- ............modal...... -->
+ <% if (products.OrderStatus === "Delivered"){%>
   <div class="modal fade" id="return" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content" style="margin-top: 120px;">
@@ -141,8 +119,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body p-5">
-          <form action="/productReturn" method="post">
-            <input type="hidden" value="<%= orders._id %>" name="orderid">
+          <form action="/productReturn?orderid=<%= orders._id %>&productId=<%= products.productId._id %>" method="post">
             <input type="hidden" value="<%= orders.totalAmount %>" name="totalPrice">
             <div class="mb-3">
               <label for="message-text" class="col-form-label">Give reason for order returning:</label>
@@ -157,53 +134,79 @@
       </div>
     </div>
   </div>
+<%} else{%>
+
+  <div class="modal fade" id="cancel" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content " style="margin-top: 120px;">
+                  <div class="modal-header p-5">
+                    <h5  id="exampleModalLabel">Are you sure?</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body p-5">
+                    <form action="/orderCancel?orderid=<%= orders._id %>&productId=<%= products.productId._id %>" method="post">
+                      <input type="hidden" value="<%= orders.totalAmount %>" name="totalPrice">
+                      
 
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+                      <% if(orders.paymentMethod != "COD" && orders.products.OrderStatus != "pending"){ %>
 
-<script>
-  console.log(orderId);
-  console.log(productId);
+                      <div class="mb-3 ">
+                        <label for="recipient-name" class="col-form-label">Choose Refund Option:</label>
+                        <select class="form-select form-control" aria-label="Default select example" name="refundOption">
+                          <option value="Wallet" class="form-control" id="recipient-name">Wallet</option>
+                        
+                        
+                      </select>
+                      </div>
 
-  function cancelOrder(orderId, productId) {
-    Swal.fire({
-      title: "Are you sure?",
-      text: "Cancel this Product!",
-      icon: "warning",
-      showCancelButton: true,
-      confirmButtonColor: "#3085d6",
-      cancelButtonColor: "#d33",
-      confirmButtonText: "Yes, Do it"
-    }).then((result) => {
-      if (result.isConfirmed) {
-        // User confirmed, proceed with the cancellation
-        $.ajax({
-          url: '/orderCancel',
-          method: "post",
-          data: { orderId, productId },
-          success: function (response) {
-            console.log(response);
-            if (response.cancel == 1) {
-              location.reload();
-              Swal.fire({
-                title: "Canceled!",
-                text: "Your order has been canceled.",
-                icon: "success"
-              });
-            }
-          },
-          error: function (error) {
-            console.log('Error:', error);
-            Swal.fire({
-              title: "Error",
-              text: "An error occurred while canceling the order.",
-              icon: "error"
-            });
-          }
-        });
-      }
-    });
-  }
-</script>
+                      <% } %>
+
+                      <div class="mb-3">
+                        <label for="message-text" class="col-form-label">Give reason for order cancelling:</label>
+                        <textarea name="reason" class="form-control" id="message-text" placeholder="eg: I changed my mind"></textarea>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                        <button type="submit" class="btn btn-primary">Yes</button>
+                      </div>
+                    </form>
+                  </div>
+                  
+                </div>
+              </div>
+
+<%}%>
+           
+
+                 
+               
+          
+        </div>
+      </div>
+      <% }) } %>
+      <div class="card mt-4 border-0 shadow">
+        <div class="card-body">
+          <h2 class="mb-4">Shipping Address</h2>
+          <p><%= orders.deliveryDetails %></p>
+        </div>
+      </div>
+      <div class="text-center mt-4">
+        <a href="/shop" class="btn btn-primary rounded continue-btn mb-4"><i class="bi bi-house-door"></i> Continue Shopping</a>
+      </div>
+    </div>
+
+
+     
+
+
+
+  </div>
+</div>
+
+
+
+
+
 
 <%- include('../users/mainLayout/mainFooter.ejs') %>
